# django-crud-example

./: .gitattributes  .gitignore  LICENSE  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
conceptu/: settings.py  urls.py  wsgi.py
products/: forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/static/css/: style.css
products/templates/products/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
tests/: conftest.py  test_setup_validation.py
users/: forms.py  urls.py  views.py
users/templates/: base.html  base.html.bkp
users/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
users/templates/users/: dashboard.html  login.html  register.html
